--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,23 @@
-node_modules/
-coverage/
-package-lock.json
-npm-debug.log
-yarn-error.log
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
 .DS_Store
-dist/
-.idea/
-.vscode/
-*.tgz
-.cache
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-bazel-*
-
-*.pyc
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
